# mib-browser-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs
ui/: app-window.slint
