[package]
name = "mib-browser-rs"
version = "0.2.0"
edition = "2024"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaml-rust2 = { version = "0.10", package = "yaml-rust2" }
tokio = { version = "1.44", features = ["full"] }
hex = { version = "0.4.3", features = ["serde"] }
snmp2 = { version = "0.5.0", features = ["full", "crypto-rust"] }
mib-rs = "0.8"
rfd = "0.17.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[build-dependencies]
slint-build = "1.14.1"

[patch.crates-io]
netsnmp-sys-nocrypto = { git = "https://github.com/jason-cts/netsnmp-sys-nocrypto.git" }
snmp2 = { git = "https://github.com/jason-cts/snmp2.git", branch = "fix-des" }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "symbols"
